# PythonExample

./: .gitignore  Makefile  Pipfile  README.md  pyproject.toml  run.py  test-fr.txt  test.txt  test_example.py
.github/workflows/: code_check.yml
tests/: test_example.py
